objects/PB_Engagement_Signals__c.object
<CustomObject>
    <label>Engagement Signal</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Signal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagement Signals</relationshipLabel>
        <relationshipName>Engagement_Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experiment_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experiment</label>
        <referenceTo>PB_Experiment__c</referenceTo>
        <relationshipLabel>Engagement Signals</relationshipLabel>
        <relationshipName>Engagement_Signals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experiment_Group__c</fullName>
        <label>Experiment Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Touched_At__c</fullName>
        <label>Smart Touched At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Contact_Owner__c</fullName>
        <formula>Contact_ID__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contact Owner</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Experiment_ID__c</columns>
        <columns>Experiment_Group__c</columns>
        <columns>Contact_ID__c</columns>
        <columns>NAME</columns>
        <columns>Smart_Touched_At__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Engagement_Signals</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Experiment_ID__c</columns>
        <columns>Experiment_Group__c</columns>
        <columns>Contact_ID__c</columns>
        <columns>Smart_Touched_At__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Current_Contact_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Experiment_Group__c</field>
            <operation>equals</operation>
            <value>experiment</value>
        </filters>
        <label>My Engagement Signals</label>
    </listViews>
</CustomObject>